# ros-eco-simulation

./: .gitattributes  .gitignore  README.md  pyproject.toml
experiments/convert-model-to--tflite/: Convert_TF_Object_Detection_API_model_to_TFLite.ipynb
launch/: detection.launch  robot.launch  simulation.launch
src/ecobot-simulation/: CMakeLists.txt  package.xml
src/ecobot-simulation/config/: simulation_config.yaml  trajectory_control.yaml
src/ecobot-simulation/launch/: load_controllers.launch  spawn_ecobot_with_controllers.launch  spawn_urdf.launch
src/ecobot-simulation/models/demo_object/: model.config  model.sdf
src/ecobot-simulation/pretrained_models/centernet_resnet_v1_50_fpn/: label_map.txt  model.tflite  pipeline.config
src/ecobot-simulation/pretrained_models/centernet_resnet_v1_50_fpn/checkpoint/: ckpt-8.data-00000-of-00001  ckpt-8.index
src/ecobot-simulation/scripts/: detect.py  grab_object.py  spin_table.py  twist_spin.py
src/ecobot-simulation/urdf/: eco_with_controllers.urdf
src/ecobot-simulation/worlds/: ecobot.world
