[tool.poetry]
name = "ros-eco-simulation"
version = "0.1.0"
description = ""
authors = ["Anna Zakutniaia"]
readme = "README.md"
packages = [{include = "ros_eco_simulation"}]

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.5.1"
tensorflow = "^2.4.1"
absl-py = "^0.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
